@@ -464,19 +464,20 @@ public class Available extends Task implements Condition {
         try {
             Class requiredClass = null;
             if (ignoreSystemclasses) {
-                loader = new AntClassLoader(null, getProject(), 
-                    classpath, false);
+                loader = new AntClassLoader(null, getProject(), classpath, 
+                                            false);
                 if (loader != null) {
                     try {
-                        loader.findClass(classname);
+                        requiredClass = loader.findClass(classname);
                     } catch (SecurityException se) {
-                        // class found but restricted name; this is actually
-                        // the case we're looking for, so catch the exception
-                        // and return
+                        // class found but restricted name; this is
+                        // actually the case we're looking for in JDK 1.3+,
+                        // so catch the exception and return
                         return true;
                     }
+                } else {
+                    return false;
                 }
-                return false;
             } else if (loader != null) {
                 requiredClass = loader.loadClass(classname);
             } else {
